// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdminPageHeader > renders in AdminItemsPage 1`] = `
<div
  class="MuiBox-root css-9iq7q"
  data-testid="admin-page-header"
>
  <div
    class="MuiBox-root css-1lekzkb"
  >
    <div
      class="MuiBox-root css-0"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-16xl4zq-MuiTypography-root"
      >
        Content Management
      </h5>
      <p
        class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
      >
        Manage quiz questions, drafts, and content lifecycle
      </p>
    </div>
    <div
      class="MuiStack-root css-1sos3zc-MuiStack-root"
    >
      <button
        aria-label="refresh"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="RefreshIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`AdminPageHeader > renders in AdminLogsPage 1`] = `
<div
  class="MuiBox-root css-9iq7q"
  data-testid="admin-page-header"
>
  <div
    class="MuiBox-root css-1lekzkb"
  >
    <div
      class="MuiBox-root css-0"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-16xl4zq-MuiTypography-root"
      >
        System Logs
      </h5>
      <p
        class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
      >
        Monitor system activity and troubleshoot issues
      </p>
    </div>
    <div
      class="MuiStack-root css-1sos3zc-MuiStack-root"
    >
      <div
        class="MuiStack-root css-kdc3n8-MuiStack-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
        >
          Auto-refresh
        </p>
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-fzgmul-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-aqlqb4-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
          >
            <input
              class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
          />
        </span>
      </div>
      <button
        aria-label="refresh"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="RefreshIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
